--- a/scss/partials/_latestnews.scss
+++ b/scss/partials/_latestnews.scss
@@ -61,3 +61,9 @@
     max-width: 66%;
     
 }
+
+@media (max-width: 1260px) {
+    .hiring {
+        display: none;
+    }
+}
