--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -40,12 +40,6 @@
     line-height: 1.5;
 }
 
-@mixin clientlink {
-    border-radius: 3px;
-    padding: 10px;
-    text-decoration: none;
-    color: white;
-}
 
 /* news */
 
